# Kursal-Prototype

./: .gitignore  .gitmodules  Cargo.toml  README.md
keys/: make.sh
kursal-cli/: Cargo.toml  relay.example.toml
kursal-cli/src/: config.rs  health.rs  identity.rs  lib.rs  limiter.rs  main.rs  swarm.rs
kursal-core/: Cargo.toml
kursal-core/src/: dto.rs  errors.rs  lib.rs  log.rs  logging.rs
kursal-core/src/api/: cmd_wrapper.rs  file_transfers.rs  handle_core_command.rs  handle_incoming.rs  mod.rs  send_message.rs  state.rs
kursal-core/src/apiserver/: auth.rs  iprecord.rs  mod.rs
kursal-core/src/contacts/: mod.rs
kursal-core/src/crypto/: dilithium.rs  messages.rs  mod.rs  stream.rs
kursal-core/src/first_contact/: ltc.rs  mod.rs  nearby.rs  nearby_adjectives.txt  nearby_animals.txt  otp.rs  otp_wordlist.txt
kursal-core/src/first_contact/nearby/: bluetooth.rs  mdns.rs
kursal-core/src/identity/: generators.rs  keychain.rs  mod.rs
kursal-core/src/messaging/: enums.rs  mod.rs
kursal-core/src/network/: dht.rs  kademlia.rs  limiter.rs  mod.rs  rendezvous.rs  rotation.rs  swarm.rs
kursal-core/src/storage/: backup.rs  file.rs  filetransfer.rs  mod.rs
kursal-core/src/tests/: contact.rs  crypto.rs  identity.rs  ltc.rs  messaging.rs  mod.rs  nearby.rs  otp.rs  storage.rs
kursal-tauri/: package.json  vite.config.js
kursal-tauri/src/: app.css  app.html
kursal-tauri/src-tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
kursal-tauri/src-tauri/capabilities/: default.json  desktop.json  mobile.json
kursal-tauri/src-tauri/icons/: icon.icns
kursal-tauri/src-tauri/src/: android_ble.rs  benchmark.rs  commands.rs  core_event.rs  deep_link.rs  dirs.rs  dto.rs  error.rs  file.rs  lib.rs  main.rs  state.rs  window_menu.rs
kursal-tauri/src/lib/: types.ts
kursal-tauri/src/lib/api/: backup.ts  benchmark.ts  contacts.ts  identity.ts  ltc.ts  messages.ts  nearby.ts  otp.ts  settings.ts  system-notify.ts  window.ts
kursal-tauri/src/lib/components/: Avatar.svelte  AvatarCropper.svelte  AvatarPicker.svelte  Benchmark.svelte  BiometricLock.svelte  Button.svelte  ConfirmDialog.svelte  EmojiPicker.svelte  ProfileModal.svelte  SecurityCodeModal.svelte  Spinner.svelte  StatusDot.svelte  ToastContainer.svelte  WinstonContactsTour.svelte
kursal-tauri/src/lib/components/onboarding/: Screen1.svelte  Screen2.svelte  Screen3.svelte  Screen4.svelte  Screen5.svelte  Winston.svelte
kursal-tauri/src/lib/components/settings/: AccountSection.svelte  AdvancedSection.svelte  AppearanceSection.svelte  Checkbox.svelte  DndDial.svelte  NetworkSection.svelte  PrivacySection.svelte  Segmented.svelte  Select.svelte  SettingCard.svelte  SettingRow.svelte  StorageSection.svelte  TextInput.svelte  Toggle.svelte
kursal-tauri/src/lib/i18n/: en.json  fr.json  index.ts  locale.svelte.ts  locales.ts
kursal-tauri/src/lib/state/: appearance.svelte.ts  confirm.svelte.ts  contacts.svelte.ts  diagnostics.svelte.ts  drafts.svelte.ts  messages.svelte.ts  nearby.svelte.ts  notifications.svelte.ts  prefs.svelte.ts  profile.svelte.ts  settings.svelte.ts  trustedDomains.svelte.ts  typing.svelte.ts  ui.svelte.ts
kursal-tauri/src/lib/utils/: file-transfer-paths.ts  haptics.ts
kursal-tauri/src/routes/: +error.svelte  +layout.svelte  +page.svelte
kursal-tauri/src/routes/(app)/: +layout.svelte
kursal-tauri/src/routes/(app)/add-contact/: +layout.svelte  +page.svelte
kursal-tauri/src/routes/(app)/add-contact/ltc/: +page.svelte
kursal-tauri/src/routes/(app)/add-contact/nearby/: +page.svelte
kursal-tauri/src/routes/(app)/add-contact/otp/: +page.svelte
kursal-tauri/src/routes/(app)/chat/: +page.svelte
kursal-tauri/src/routes/(app)/chat/[id]/: +page.svelte  ActionSheet.svelte  ChatHeader.svelte  FileConfirmModal.svelte  MediaViewer.svelte  MessageBubble.svelte  MessageComposer.svelte  OfflineQueueBar.svelte  SelectTextModal.svelte  chat-utils.ts
kursal-tauri/src/routes/(app)/settings/: +page.svelte
kursal-tauri/src/routes/onboarding/: +page.svelte
