[package]
name = "kursal-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
kursal-core = { path = "../kursal-core" }

clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
log = { workspace = true }
libp2p = { workspace = true }
anyhow = { workspace = true }

axum = { workspace = true }
