[package]
name = "kursal-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rayon = { workspace = true }
emojis = { workspace = true }
subtle = { workspace = true }

# Crypto
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
libsignal-protocol = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
chacha20poly1305 = { workspace = true }

# Network
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
btleplug = { workspace = true }

# Storage
redb = { workspace = true }
keyring-core = { workspace = true }

# API
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["cors"] }
utoipa ={ workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
tokio-tungstenite = "0.29" # TODO: when possible, use workspace = true / requires ^29

[dev-dependencies]
dirs = "6"

[target.'cfg(not(target_os = "android"))'.dependencies]
ble-peripheral-rust = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = { workspace = true }
ndk-context = "0.1"
jni = "0.19"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true, features = [
    "keychain",
    "protected",
] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { workspace = true, features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus-secret-service-keyring-store = { workspace = true, features = [
    "crypto-rust",
    "vendored",
] }
