[package]
name = "kursal-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "kursal_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kursal-core = { path = "../../kursal-core" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }

log = { workspace = true }
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
