[package]
name = "kursal-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "kursal_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kursal-core = { path = "../../kursal-core" }
kursal-cli = { path = "../../kursal-cli" }

tauri = { version = "2", features = ["protocol-asset", "devtools", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }

log = { workspace = true }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-haptics = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
